<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:id="@+id/relativeLayout2">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/profile_image"
        android:src="@drawable/user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:padding="8dp"
        android:text="@string/hello"
        android:id="@+id/show_message"
        android:textSize="18sp"
        android:background="@drawable/background_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/profile_image"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/text_seen_status"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/seen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_message"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_view_media"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/button_shape_login"
        android:text="@string/view_media"
        app:layout_constraintBottom_toBottomOf="@+id/show_message"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/item_viewmedia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_seen_status" />



</androidx.constraintlayout.widget.ConstraintLayout>